fixing iframe overflow

--- a/src/app.css
+++ b/src/app.css
@@ -46,7 +46,7 @@ body{
         height: 8em;
     }
     iframe{
-        width: 100vw;
+        width: 100%;
         height: 100svh;
         display:flex;
 
